# vbfnlo

./: .ctags  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.dependencylist  NEWS  README  README.md  acinclude.m4  configure.ac
PDFsets/: CT10Pdf.F  CT18LO.pds  CT18NLO.pds  CT18Pdf.f  Ctq6Pdf.F  Makefile.am  Makefile.dep  ct10.00.pds  mrst2004qed.F  mstw2008.F  pftopdg.F
amplitudes/: Makefile.am  Makefile.dep  amplitudes.F
amplitudes/Spin2/: Makefile.am  Makefile.dep  aatxxx_sing.F  aatxxx_tripn.F  aztxxx_sing.F  aztxxx_tripn.F  uaaxxx_sing.F  uaaxxx_tripn.F  uazxxx_sing.F  uazxxx_tripn.F  uwaxxx_trippm.F  uwwxxx_sing.F  uwwxxx_tripn.F  uwzxxx_trippm.F  uzzxxx_sing.F  uzzxxx_tripn.F  watxxx_trippm.F  wwtxxx_sing.F  wwtxxx_tripn.F  wztxxx_trippm.F  zztxxx_sing.F  zztxxx_tripn.F
amplitudes/diboson/: AAtoaa.F  DIBOSjwtowh.F  DIBOSjwtowh_anomal.F  DIBOStoqqll.F  DIBOStoww.F  DIBOStoww_anomal.F  DIBOStoww_had.F  DIBOSwtowa.F  DIBOSwtowa_anomal.F  DIBOSwtowh.F  DIBOSwtowh_anomal.F  DIBOSwtowz.F  DIBOSwtowz_anomal.F  DIBOSwtowz_had.F  Makefile.am  Makefile.dep  ZAtoza.F  ZZtozz.F  ZZtozz_had.F  fl_vvjj.F  genps.inc  genpsr.inc  ggAA.F  ggWW.F  ggZA.F  ggZZ.F  m2s_qqAA.F  m2s_qqAAj.F  m2s_qqVV.F  m2s_qqVVj.F  m2s_qqWA.F  m2s_qqWAj.F  m2s_qqWH.F  m2s_qqWHj.F  m2s_qqWHj2.F  m2s_qqWHjj.F  m2s_qqWZ.F  m2s_qqWZj.F  m2s_qqZA.F  m2s_qqZAj.F  (+59 more)
amplitudes/ggf/: Makefile.am  Makefile.dep  c_coefficients.inc  c_functions.F  c_functions.inc  d_coefficients.inc  d_functions.F  d_functions.inc  genps.inc  gf_gghggg.F  gf_guuccxH.F  gf_guuuuxH.F  gf_higgs_ME.F  gf_qgaqgg-bottom.F  gf_qgaqgg-eff.F  gf_qgaqgg-top.F  gf_qghqgg-bottom.F  gf_qghqgg.F  gf_qqaqqg-bottom.F  gf_qqaqqg-eff.F  gf_qqaqqg-top.F  gf_qqhqqg-bottom.F  gf_qqhqqg.F  gf_qqhqqg2.F  gf_ucucgH.F  gf_uuuugH.F  gf_uuxccxgH.F  gf_uuxuuxgH.F  ggf_Apen.F  ggf_Hpen.F  ggf_Hpen_a.F  ggf_Hpen_b.F  ggf_Hpen_c.F  ggf_amp_aux.F  ggf_box_pen_hex.F  ggf_default.inc  ggf_dotproducts.F  ggf_dotproducts.inc  ggf_params.inc  ggf_process.inc  (+22 more)
amplitudes/hjjj/: Makefile.am  Makefile.dep  Tmunu.F  coeff.F  color.inc  coupl_red.inc  dc_usbbh.F  dipolesub.F  dipsub.F  genps.inc  hjjj_amp_aux.F  hjjja.F  m2s_qqh3j.F  m2s_qqh4j.F  qqh2q2g_me.F  qqh4q_me.F  qqh4q_mg.F  qqh4q_sub.F  qqh4qcc_sub.F  qqhqq.F  qqhqqgg_cc.F  qqhqqgg_mg.F  qqhqqgg_mgfast.F  us_usbbh.F  us_usuuh.F
amplitudes/qcdwz/: Makefile.am  Makefile.dep  Wjj.F  brakets.inc  cacheZZ.inc  common.inc  m2s_WW2j.F  m2s_WW3j.F  m2s_WZ2j.F  m2s_WZ3j.F  m2s_ZZ2j.F  m2s_ZZ3j.F  nloStuff.F  qqwwqqVirt.F  qqwzggVirt.F  qqwzqqVirt.F  qqzzggVirt.F  qqzzqqVirt.F  ug2dgwz.F  uu2udwz.F
amplitudes/triboson/: AAAtoaaa_anomal.F  Makefile.am  Makefile.dep  VVVPentcheck.F  WAAtowa.F  WAAtowa_anomal.F  WAAtowaa.F  WAAtowaa_anomal.F  WWA_ltens_had.F  WWAtowa.F  WWAtowa_anomal.F  WWAtowwa.F  WWAtowwa_anomal.F  WWW_ltens_had.F  WWWtoww.F  WWWtoww_anomal.F  WWWtowww.F  WWWtowww_anomal.F  WWWtowww_kk.F  WWZ_ltens_had.F  WWZtoww.F  WWZtoww_anomal.F  WWZtowwz.F  WWZtowwz_anomal.F  WWZtowwz_kk.F  WWZtowz.F  WWZtowz_anomal.F  WZA_ltens_had.F  WZAtowa.F  WZAtowa_anomal.F  WZAtowz.F  WZAtowz_anomal.F  WZAtowza.F  WZAtowza_anomal.F  WZAtoza.F  WZAtoza_anomal.F  ZAAtoza.F  ZAAtoza_anomal.F  ZAAtozaa.F  ZAAtozaa_anomal.F  (+143 more)
amplitudes/vvj/: Makefile.am  Makefile.dep  genps.inc  ggWWg.F  ggZZg.F  leptens.F  m2s_qqVVj2.F  m2s_qqVVjj.F  m2s_qqZZj2.F  m2s_qqZZjj.F  m2s_qqwmag.F  m2s_qqwmagj.F  m2s_qqwmagvirt.F  m2s_qqwmzg.F  m2s_qqwmzgj.F  m2s_qqwmzgvirt.F  m2s_qqwpag.F  m2s_qqwpagj.F  m2s_qqwpagvirt.F  m2s_qqwpzg.F  m2s_qqwpzgj.F  m2s_qqwpzgvirt.F  mg2_ddWWdd.F  mg2_ddWWgg.F  mg2_ddZZdd.F  mg2_ddZZgg.F  mg2_duWWdu.F  mg2_duZZdu.F  mg2_udWWud.F  mg2_udZZud.F  mg2_uuWWgg.F  mg2_uuWWuu.F  mg2_uuZZgg.F  mg2_uuZZuu.F  nexternal.inc  qqVVgg.F  qqVVqq.F  qqWWj_curr.F  qqZZgg.F  qqZZj_curr.F  (+3 more)
amplitudes/vvjj/: HAjj_ME.F  HAjj_currents.F  HAjjj_ME.F  Makefile.am  Makefile.dep  SOE_decomposition.F  VBF_BOX_ABE.F  VBF_BOX_ABE_CURRENT.F  VBF_PENT_ABE.F  VBF_PENT_ABE_CURRENT.F  anomalvvtovv.F  eigenV.inc  eigenvalues.F  gauge5-test-vv.F  gmunu.inc  jvirt5-isig.F  jvirt5.F  m2s_qqHAqq.F  m2s_qqWPPjqq.F  m2s_qqWjqq.F  m2s_qqZjqq.F  m2s_qqwppqq.F  m2s_qqwqq.F  m2s_qqzqq.F  mg2_aa_ucuc.F  mg2_dsds.F  mg2_towpwp.F  mg2_toww.F  mg2_towz.F  mg2_tozz.F  mg2_ucuc.F  mg2_usdc.F  mg2_usus.F  mg2_wma_ddsc.F  mg2_wma_ducc.F  mg2_wma_duss.F  (+83 more)
doc/: Makefile  Makefile.am  Manual.bib  Manual.tex
helas/: Makefile.am  Makefile.dep  anomal3.F  anomal4.F  coupsm-ORIGINAL.F  fvoxxx.F  ggggxx.F  iovxxx.F  ixxxxx.F  j3xxxx.F  jvssxx.F  jvtaxx.F  oxxxxx.F  vcartx.F  vvhaxx.F
include/: Makefile.am
lib/: Makefile.am  Makefile.dep  ggflo_main.F  trigger_cxx_linking.cpp  vbfnlo_main.F  vbfnlo_main.F90
loops/: Makefile.am  Makefile.dep  aux_loops.F
phasespace/: Makefile.am  Makefile.dep  multires.inc  phasespace.F  ps_WWW.F  ps_ZZZj.F  ps_ggf.F  ps_qqAAAj.F  ps_qqAAj.F  ps_qqHHj.F  ps_qqVAAj.F  ps_qqVAj.F  ps_qqVHj.F  ps_qqVVAj.F  ps_qqVVVj.F  ps_qqVVj.F  ps_qqVj.F  ps_qqWZ.F  ps_tools.F  ps_tribos_kk.F  ps_vnj.F  ps_vvnj.F
regress/: Makefile  Makefile.am  Readme.md  check_results.py  get_grids  get_results  make_runs.py  makecheck.sh  modify_point_numbers  parsedat.py  pytest-driver.sh  rename-results.py  set-vbfnlo-config.py  test_runs.py  vbfnlo.test
src/: FFini-dummy.F  FFini.F  FFini.F90  LTools-dummy.F  LTools.F  LTools.F.in  Makefile.am  Makefile.dep  ggflo_main.F  sps1a.slha  vbfnlo_main.F  vbfnlo_main.F90  vbfnlo_olpread.cxx
utilities/: Apdf.inc  BLHAclass.cpp  BLHAclass.h  BLHAhelper.F90  BLHAhelper.inc  BLHAinterface.cpp  BLHAinterface.h  BLHAmommapping.F90  CC_boxes.F  CC_boxes.F.in  CC_pentagons.F  CC_pentagons.F.in  CC_qqV.F  CC_qqV.F.in  CPS_HIGGSTO.F  CPS_HIGGSTO.F90  CataniSeymour.F  FCtools.F  FHiggs.F  FHiggs.F.in  FillNTuple.F  HtoWW.F  Makefile.am  Makefile.dep  NC_boxes.F  NC_boxes.F.in  NC_pentagons.F  NC_pentagons.F.in  NC_qqV.F  NC_qqV.F.in  PDG.h  SLHA.h  SLHADefs.h  SLHAIntern.h  SLHAReadBlocks.h  VBFNLOConfig.h.in  abbr_CC.h  abbr_NC.h  an_couplings.inc  anomHiggs.F  (+95 more)
(+1887 files in other folders)
