MANUALNAME = Manual
MANUALTEX = $(MANUALNAME).tex
MANUALPDF = $(MANUALNAME).pdf

if HAVE_PDFLATEX

dist_doc_DATA = $(MANUALPDF)

CLEANFILES = \
  $(MANUALNAME).aux \
  $(MANUALNAME).log \
  $(MANUALNAME).out \
  $(MANUALNAME).toc 

DISTCLEANFILES = \
  $(MANUALPDF)

$(MANUALPDF): $(srcdir)/$(MANUALTEX)
	$(PDFLATEX) $<
	$(PDFLATEX) $<
	$(PDFLATEX) $<

endif
