pkglib_LTLIBRARIES = libHELAS.la
libHELAS_la_SOURCES = \
ixxxxx.F \
oxxxxx.F \
fvixxx.F \
fvoxxx.F \
jvvxxx.F \
vvvxxx.F \
jioxxx.F \
iovxxx.F \
hvvxxx.F \
jvsxxx.F \
w3w3xx.F \
wwwwxx.F \
vvsxxx.F \
vxxxxx.F \
iosxxx.F \
hioxxx.F \
fsoxxx.F \
jwwwxx.F \
fsixxx.F \
sxxxxx.F \
ggggxx.F \
vcartx.F \
jw3wxx.F \
ttsaxx.F \
jvtaxx.F \
uvvaxx.F \
vvvsxx.F \
vvshxx.F \
sssxxx.F \
vvssxx.F \
vvhaxx.F \
anomal3.F \
anomal4.F \
jgggxx.F


libHELAS_la_FFLAGS = $(AM_FFLAGS)

$(top_builddir)/include/%.mod: libHELAS_la-%.lo
	$(MAKE) $^

include $(top_srcdir)/Makefile.dependencylist
EXTRA_DIST = Makefile.dep
